[project]
name = "pg-adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wattai", email = "evamark.wattai@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "google-adk>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
